<resources>
    <string name="app_name">Tarea</string>
    <string name="menu">Aplicacion de Tarea</string>
    <string name="title">Mi Video</string>
    <string name="space"></string>
    <string name="back">Volver</string>
    <string name="textfinal">Disfrute del Servicio</string>
    <string name="titleBD">Gestor de Usuarios</string>
    <string name="textCode">Cod: </string>
    <string name="textName">Nombre: </string>
    <string name="tipCode">Numero</string>
    <string name="tipName">Ingrese el nombre</string>
    <string name="btnAdd">Agregar</string>
    <string name="btnUpdate">Actualizar</string>
    <string name="btnDelete">Borrar</string>
    <string name="btnList">listar</string>
</resources>